study/flex-and-bison/flex/sql/pmysql.output
Terminals unused in grammar

    ADD
    ALTER
    ANALYZE
    BEFORE
    CALL
    CASCADE
    CHANGE
    CHECK
    COLUMN
    CONDITION
    CONSTRAINT
    CONTINUE
    CONVERT
    CURRENT_USER
    CURSOR
    DATABASES
    DECLARE
    DESCRIBE
    DETERMINISTIC
    DIV
    DROP
    DUAL
    EACH
    ELSEIF
    ENCLOSED
    ESCAPED
    EXIT
    EXPLAIN
    FETCH
    FOREIGN
    GRANT
    INFILE
    INOUT
    INSENSITIVE
    ITERATE
    KEYS
    KILL
    LEAVE
    LINES
    LOAD
    LOCALTIME
    LOCALTIMESTAMP
    LOCK
    LONG
    LOOP
    MATCH
    MINUTE_MICROSECOND
    MINUTE_SECOND
    MODIFIES
    NO_WRITE_TO_BINLOG
    NUMBER
    OPTIMIZE
    OPTION
    OPTIONALLY
    OUT
    OUTFILE
    PRECISION
    PROCEDURE
    PURGE
    READ
    READS
    REFERENCES
    RELEASE
    RENAME
    REPEAT
    REQUIRE
    RESTRICT
    RETURN
    REVOKE
    SCHEMAS
    SECOND_MICROSECOND
    SENSITIVE
    SEPARATOR
    SHOW
    SONAME
    SPATIAL
    SPECIFIC
    SQL
    SQLEXCEPTION
    SQLSTATE
    SQLWARNING
    SSL
    STARTING
    TERMINATED
    TO
    TRIGGER
    UNDO
    UNION
    UNLOCK
    USAGE
    UTC_DATE
    UTC_TIME
    UTC_TIMESTAMP
    VARYING
    WHILE
    WRITE


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 stmt: select_stmt

    4 select_stmt: SELECT select_opts select_expr_list
    5            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    6 opt_where: %empty
    7          | WHERE linkedListNode

    8 opt_groupby: %empty
    9            | GROUP BY groupby_list opt_with_rollup

   10 groupby_list: linkedListNode opt_asc_desc
   11             | groupby_list ',' linkedListNode opt_asc_desc

   12 opt_asc_desc: %empty
   13             | ASC
   14             | DESC

   15 opt_with_rollup: %empty
   16                | WITH ROLLUP

   17 opt_having: %empty
   18           | HAVING linkedListNode

   19 opt_orderby: %empty
   20            | ORDER BY groupby_list

   21 opt_limit: %empty
   22          | LIMIT linkedListNode
   23          | LIMIT linkedListNode ',' linkedListNode

   24 opt_into_list: %empty
   25              | INTO column_list

   26 column_list: NAME
   27            | column_list ',' NAME

   28 select_opts: %empty
   29            | select_opts ALL
   30            | select_opts DISTINCT
   31            | select_opts DISTINCTROW
   32            | select_opts HIGH_PRIORITY
   33            | select_opts STRAIGHT_JOIN
   34            | select_opts SQL_SMALL_RESULT
   35            | select_opts SQL_BIG_RESULT
   36            | select_opts SQL_CALC_FOUND_ROWS

   37 select_expr_list: select_expr
   38                 | select_expr_list ',' select_expr
   39                 | '*'

   40 select_expr: linkedListNode opt_as_alias

   41 table_references: table_reference
   42                 | table_references ',' table_reference

   43 table_reference: table_factor
   44                | join_table

   45 table_factor: NAME opt_as_alias index_hint
   46             | NAME '.' NAME opt_as_alias index_hint
   47             | table_subquery opt_as NAME
   48             | '(' table_references ')'

   49 opt_as: AS
   50       | %empty

   51 opt_as_alias: AS NAME
   52             | NAME
   53             | %empty

   54 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
   55           | table_reference STRAIGHT_JOIN table_factor
   56           | table_reference STRAIGHT_JOIN table_factor ON linkedListNode
   57           | table_reference left_or_right opt_outer JOIN table_factor join_condition
   58           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

   59 opt_inner_cross: %empty
   60                | INNER
   61                | CROSS

   62 opt_outer: %empty
   63          | OUTER

   64 left_or_right: LEFT
   65              | RIGHT

   66 opt_left_or_right_outer: LEFT opt_outer
   67                        | RIGHT opt_outer
   68                        | %empty

   69 opt_join_condition: join_condition
   70                   | %empty

   71 join_condition: ON linkedListNode
   72               | USING '(' column_list ')'

   73 index_hint: USE KEY opt_for_join '(' index_list ')'
   74           | IGNORE KEY opt_for_join '(' index_list ')'
   75           | FORCE KEY opt_for_join '(' index_list ')'
   76           | %empty

   77 opt_for_join: FOR JOIN
   78             | %empty

   79 index_list: NAME
   80           | index_list ',' NAME

   81 table_subquery: '(' select_stmt ')'

   82 stmt: delete_stmt

   83 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

   84 delete_opts: delete_opts LOW_PRIORITY
   85            | delete_opts QUICK
   86            | delete_opts IGNORE
   87            | %empty

   88 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

   89 delete_list: NAME opt_dot_star
   90            | delete_list ',' NAME opt_dot_star

   91 opt_dot_star: %empty
   92             | '.' '*'

   93 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

   94 stmt: insert_stmt

   95 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

   96 opt_ondupupdate: %empty
   97                | ONDUPLICATE KEY UPDATE insert_asgn_list

   98 insert_opts: %empty
   99            | insert_opts LOW_PRIORITY
  100            | insert_opts DELAYED
  101            | insert_opts HIGH_PRIORITY
  102            | insert_opts IGNORE

  103 opt_into: INTO
  104         | %empty

  105 opt_col_names: %empty
  106              | '(' column_list ')'

  107 insert_vals_list: '(' insert_vals ')'
  108                 | insert_vals_list ',' '(' insert_vals ')'

  109 insert_vals: linkedListNode
  110            | DEFAULT
  111            | insert_vals ',' linkedListNode
  112            | insert_vals ',' DEFAULT

  113 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  114            | INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  115 insert_asgn_list: NAME COMPARISON linkedListNode
  116                 | NAME COMPARISON DEFAULT
  117                 | insert_asgn_list ',' NAME COMPARISON linkedListNode
  118                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  119 stmt: replace_stmt

  120 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  121             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  122             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  123 stmt: update_stmt

  124 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  125 update_opts: %empty
  126            | insert_opts LOW_PRIORITY
  127            | insert_opts IGNORE

  128 update_asgn_list: NAME COMPARISON linkedListNode
  129                 | NAME '.' NAME COMPARISON linkedListNode
  130                 | update_asgn_list ',' NAME COMPARISON linkedListNode
  131                 | update_asgn_list ',' NAME '.' NAME COMPARISON linkedListNode

  132 stmt: create_database_stmt

  133 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  134                     | CREATE SCHEMA opt_if_not_exists NAME

  135 opt_if_not_exists: %empty
  136                  | IF EXISTS

  137 stmt: create_table_stmt

  138 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  139                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  140                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  141                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  142                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  143                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  144 create_col_list: create_definition
  145                | create_col_list ',' create_definition

  146 $@1: %empty

  147 create_definition: $@1 NAME data_type column_atts
  148                  | PRIMARY KEY '(' column_list ')'
  149                  | KEY '(' column_list ')'
  150                  | INDEX '(' column_list ')'
  151                  | FULLTEXT INDEX '(' column_list ')'
  152                  | FULLTEXT KEY '(' column_list ')'

  153 column_atts: %empty
  154            | column_atts NOT NULLX
  155            | column_atts NULLX
  156            | column_atts DEFAULT STRING
  157            | column_atts DEFAULT INTNUM
  158            | column_atts DEFAULT APPROXNUM
  159            | column_atts DEFAULT BOOL
  160            | column_atts AUTO_INCREMENT
  161            | column_atts UNIQUE '(' column_list ')'
  162            | column_atts UNIQUE KEY
  163            | column_atts PRIMARY KEY
  164            | column_atts KEY
  165            | column_atts COMMENT STRING

  166 opt_length: %empty
  167           | '(' INTNUM ')'
  168           | '(' INTNUM ',' INTNUM ')'

  169 opt_binary: %empty
  170           | BINARY

  171 opt_uz: %empty
  172       | opt_uz UNSIGNED
  173       | opt_uz ZEROFILL

  174 opt_csc: %empty
  175        | opt_csc CHAR SET STRING
  176        | opt_csc COLLATE STRING

  177 data_type: BIT opt_length
  178          | TINYINT opt_length opt_uz
  179          | SMALLINT opt_length opt_uz
  180          | MEDIUMINT opt_length opt_uz
  181          | INT opt_length opt_uz
  182          | INTEGER opt_length opt_uz
  183          | BIGINT opt_length opt_uz
  184          | REAL opt_length opt_uz
  185          | DOUBLE opt_length opt_uz
  186          | FLOAT opt_length opt_uz
  187          | DECIMAL opt_length opt_uz
  188          | DATE
  189          | TIME
  190          | TIMESTAMP
  191          | DATETIME
  192          | YEAR
  193          | CHAR opt_length opt_csc
  194          | VARCHAR '(' INTNUM ')' opt_csc
  195          | BINARY opt_length
  196          | VARBINARY '(' INTNUM ')'
  197          | TINYBLOB
  198          | BLOB
  199          | MEDIUMBLOB
  200          | LONGBLOB
  201          | TINYTEXT opt_binary opt_csc
  202          | TEXT opt_binary opt_csc
  203          | MEDIUMTEXT opt_binary opt_csc
  204          | LONGTEXT opt_binary opt_csc
  205          | ENUM '(' enum_list ')' opt_csc
  206          | SET '(' enum_list ')' opt_csc

  207 enum_list: STRING
  208          | enum_list ',' STRING

  209 create_select_statement: opt_ignore_replace opt_as select_stmt

  210 opt_ignore_replace: %empty
  211                   | IGNORE
  212                   | REPLACE

  213 opt_temporary: %empty
  214              | TEMPORARY

  215 stmt: set_stmt

  216 set_stmt: SET set_list

  217 set_list: set_expr
  218         | set_list ',' set_expr

  219 set_expr: USERVAR COMPARISON linkedListNode
  220         | USERVAR ASSIGN linkedListNode

  221 linkedListNode: NAME
  222     | USERVAR
  223     | NAME '.' NAME
  224     | STRING
  225     | INTNUM
  226     | APPROXNUM
  227     | BOOL
  228     | linkedListNode '+' linkedListNode
  229     | linkedListNode '-' linkedListNode
  230     | linkedListNode '*' linkedListNode
  231     | linkedListNode '/' linkedListNode
  232     | linkedListNode '%' linkedListNode
  233     | linkedListNode MOD linkedListNode
  234     | '-' linkedListNode
  235     | linkedListNode ANDOP linkedListNode
  236     | linkedListNode OR linkedListNode
  237     | linkedListNode XOR linkedListNode
  238     | linkedListNode COMPARISON linkedListNode
  239     | linkedListNode COMPARISON '(' select_stmt ')'
  240     | linkedListNode COMPARISON ANY '(' select_stmt ')'
  241     | linkedListNode COMPARISON SOME '(' select_stmt ')'
  242     | linkedListNode COMPARISON ALL '(' select_stmt ')'
  243     | linkedListNode '|' linkedListNode
  244     | linkedListNode '&' linkedListNode
  245     | linkedListNode '^' linkedListNode
  246     | linkedListNode SHIFT linkedListNode
  247     | NOT linkedListNode
  248     | '!' linkedListNode
  249     | USERVAR ASSIGN linkedListNode
  250     | linkedListNode IS NULLX
  251     | linkedListNode IS NOT NULLX
  252     | linkedListNode IS BOOL
  253     | linkedListNode IS NOT BOOL
  254     | linkedListNode BETWEEN linkedListNode AND linkedListNode

  255 val_list: linkedListNode
  256         | linkedListNode ',' val_list

  257 opt_val_list: %empty
  258             | val_list

  259 linkedListNode: linkedListNode IN '(' val_list ')'
  260     | linkedListNode NOT IN '(' val_list ')'
  261     | linkedListNode IN '(' select_stmt ')'
  262     | linkedListNode NOT IN '(' select_stmt ')'
  263     | EXISTS '(' select_stmt ')'
  264     | NAME '(' opt_val_list ')'
  265     | FCOUNT '(' '*' ')'
  266     | FCOUNT '(' linkedListNode ')'
  267     | FSUBSTRING '(' val_list ')'
  268     | FSUBSTRING '(' linkedListNode FROM linkedListNode ')'
  269     | FSUBSTRING '(' linkedListNode FROM linkedListNode FOR linkedListNode ')'
  270     | FTRIM '(' val_list ')'
  271     | FTRIM '(' trim_ltb linkedListNode FROM val_list ')'

  272 trim_ltb: LEADING
  273         | TRAILING
  274         | BOTH

  275 linkedListNode: FDATE_ADD '(' linkedListNode ',' interval_exp ')'
  276     | FDATE_SUB '(' linkedListNode ',' interval_exp ')'

  277 interval_exp: INTERVAL linkedListNode DAY_HOUR
  278             | INTERVAL linkedListNode DAY_MICROSECOND
  279             | INTERVAL linkedListNode DAY_MINUTE
  280             | INTERVAL linkedListNode DAY_SECOND
  281             | INTERVAL linkedListNode YEAR_MONTH
  282             | INTERVAL linkedListNode YEAR
  283             | INTERVAL linkedListNode HOUR_MICROSECOND
  284             | INTERVAL linkedListNode HOUR_MINUTE
  285             | INTERVAL linkedListNode HOUR_SECOND

  286 linkedListNode: CASE linkedListNode case_list END
  287     | CASE linkedListNode case_list ELSE linkedListNode END
  288     | CASE case_list END
  289     | CASE case_list ELSE linkedListNode END

  290 case_list: WHEN linkedListNode THEN linkedListNode
  291          | case_list WHEN linkedListNode THEN linkedListNode

  292 linkedListNode: linkedListNode LIKE linkedListNode
  293     | linkedListNode NOT LIKE linkedListNode
  294     | linkedListNode REGEXP linkedListNode
  295     | linkedListNode NOT REGEXP linkedListNode
  296     | CURRENT_TIMESTAMP
  297     | CURRENT_DATE
  298     | CURRENT_TIME
  299     | BINARY linkedListNode


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 248
    '%' (37) 232
    '&' (38) 244
    '(' (40) 48 72 73 74 75 81 106 107 108 138 139 140 142 148 149 150 151 152 161 167 168 194 196 205 206 239 240 241 242 259 260 261 262 263 264 265 266 267 268 269 270 271 275 276
    ')' (41) 48 72 73 74 75 81 106 107 108 138 139 140 142 148 149 150 151 152 161 167 168 194 196 205 206 239 240 241 242 259 260 261 262 263 264 265 266 267 268 269 270 271 275 276
    '*' (42) 39 92 230 265
    '+' (43) 228
    ',' (44) 11 23 27 38 42 80 90 108 111 112 117 118 130 131 145 168 208 218 256 275 276
    '-' (45) 229 234
    '.' (46) 46 92 129 131 139 142 143 223
    '/' (47) 231
    ';' (59) 1 2
    '^' (94) 245
    '|' (124) 243
    error (256)
    NAME <strval> (258) 26 27 45 46 47 51 52 79 80 83 89 90 95 113 114 115 116 117 118 120 121 122 128 129 130 131 133 134 138 139 140 141 142 143 147 221 223 264
    STRING <strval> (259) 156 165 175 176 207 208 224
    INTNUM <intval> (260) 157 167 168 194 196 225
    BOOL <intval> (261) 159 227 252 253
    APPROXNUM <floatval> (262) 158 226
    USERVAR <strval> (263) 219 220 222 249
    ASSIGN (264) 220 249
    ANDOP (265) 235
    IS (266) 250 251 252 253
    COMPARISON <subtok> (267) 115 116 117 118 128 129 130 131 219 238 239 240 241 242
    SHIFT <subtok> (268) 246
    UMINUS (269)
    ADD (270)
    ALL (271) 29 242
    ALTER (272)
    ANALYZE (273)
    AND (274) 254
    ANY (275) 240
    AS (276) 49 51
    ASC (277) 13
    AUTO_INCREMENT (278) 160
    BEFORE (279)
    BETWEEN (280) 254
    BIGINT (281) 183
    BINARY (282) 170 195 299
    BIT (283) 177
    BLOB (284) 198
    BOTH (285) 274
    BY (286) 9 20
    CALL (287)
    CASCADE (288)
    CASE (289) 286 287 288 289
    CHANGE (290)
    CHAR (291) 175 193
    CHECK (292)
    COLLATE (293) 176
    COLUMN (294)
    COMMENT (295) 165
    CONDITION (296)
    CONSTRAINT (297)
    CONTINUE (298)
    CONVERT (299)
    CREATE (300) 133 134 138 139 140 141 142 143
    CROSS (301) 61
    CURRENT_DATE (302) 297
    CURRENT_TIME (303) 298
    CURRENT_TIMESTAMP (304) 296
    CURRENT_USER (305)
    CURSOR (306)
    DATABASE (307) 133
    DATABASES (308)
    DATE (309) 188
    DATETIME (310) 191
    DAY_HOUR (311) 277
    DAY_MICROSECOND (312) 278
    DAY_MINUTE (313) 279
    DAY_SECOND (314) 280
    DECIMAL (315) 187
    DECLARE (316)
    DEFAULT (317) 110 112 116 118 156 157 158 159
    DELAYED (318) 100
    DELETE (319) 83 88 93
    DESC (320) 14
    DESCRIBE (321)
    DETERMINISTIC (322)
    DISTINCT (323) 30
    DISTINCTROW (324) 31
    DIV (325)
    DOUBLE (326) 185
    DROP (327)
    DUAL (328)
    EACH (329)
    ELSE (330) 287 289
    ELSEIF (331)
    ENCLOSED (332)
    END (333) 286 287 288 289
    ENUM (334) 205
    ESCAPED (335)
    EXISTS <subtok> (336) 136 263
    EXIT (337)
    EXPLAIN (338)
    FETCH (339)
    FLOAT (340) 186
    FOR (341) 77 269
    FORCE (342) 75
    FOREIGN (343)
    FROM (344) 5 83 88 93 268 269 271
    FULLTEXT (345) 151 152
    GRANT (346)
    GROUP (347) 9
    HAVING (348) 18
    HIGH_PRIORITY (349) 32 101
    HOUR_MICROSECOND (350) 283
    HOUR_MINUTE (351) 284
    HOUR_SECOND (352) 285
    IF (353) 136
    IGNORE (354) 74 86 102 127 211
    IN (355) 259 260 261 262
    INDEX (356) 150 151
    INFILE (357)
    INNER (358) 60
    INOUT (359)
    INSENSITIVE (360)
    INSERT (361) 95 113 114
    INT (362) 181
    INTEGER (363) 182
    INTERVAL (364) 277 278 279 280 281 282 283 284 285
    INTO (365) 25 103
    ITERATE (366)
    JOIN (367) 54 57 58 77
    KEY (368) 73 74 75 97 148 149 152 162 163 164
    KEYS (369)
    KILL (370)
    LEADING (371) 272
    LEAVE (372)
    LEFT (373) 64 66
    LIKE (374) 292 293
    LIMIT (375) 22 23
    LINES (376)
    LOAD (377)
    LOCALTIME (378)
    LOCALTIMESTAMP (379)
    LOCK (380)
    LONG (381)
    LONGBLOB (382) 200
    LONGTEXT (383) 204
    LOOP (384)
    LOW_PRIORITY (385) 84 99 126
    MATCH (386)
    MEDIUMBLOB (387) 199
    MEDIUMINT (388) 180
    MEDIUMTEXT (389) 203
    MINUTE_MICROSECOND (390)
    MINUTE_SECOND (391)
    MOD (392) 233
    MODIFIES (393)
    NATURAL (394) 58
    NOT (395) 154 247 251 253 260 262 293 295
    NO_WRITE_TO_BINLOG (396)
    NULLX (397) 154 155 250 251
    NUMBER (398)
    ON (399) 56 71
    ONDUPLICATE (400) 97
    OPTIMIZE (401)
    OPTION (402)
    OPTIONALLY (403)
    OR (404) 236
    ORDER (405) 20
    OUT (406)
    OUTER (407) 63
    OUTFILE (408)
    PRECISION (409)
    PRIMARY (410) 148 163
    PROCEDURE (411)
    PURGE (412)
    QUICK (413) 85
    READ (414)
    READS (415)
    REAL (416) 184
    REFERENCES (417)
    REGEXP (418) 294 295
    RELEASE (419)
    RENAME (420)
    REPEAT (421)
    REPLACE (422) 120 121 122 212
    REQUIRE (423)
    RESTRICT (424)
    RETURN (425)
    REVOKE (426)
    RIGHT (427) 65 67
    ROLLUP (428) 16
    SCHEMA (429) 134
    SCHEMAS (430)
    SECOND_MICROSECOND (431)
    SELECT (432) 4 5
    SENSITIVE (433)
    SEPARATOR (434)
    SET (435) 113 121 124 175 206 216
    SHOW (436)
    SMALLINT (437) 179
    SOME (438) 241
    SONAME (439)
    SPATIAL (440)
    SPECIFIC (441)
    SQL (442)
    SQLEXCEPTION (443)
    SQLSTATE (444)
    SQLWARNING (445)
    SQL_BIG_RESULT (446) 35
    SQL_CALC_FOUND_ROWS (447) 36
    SQL_SMALL_RESULT (448) 34
    SSL (449)
    STARTING (450)
    STRAIGHT_JOIN (451) 33 55 56
    TABLE (452) 138 139 140 141 142 143
    TEMPORARY (453) 214
    TEXT (454) 202
    TERMINATED (455)
    THEN (456) 290 291
    TIME (457) 189
    TIMESTAMP (458) 190
    TINYBLOB (459) 197
    TINYINT (460) 178
    TINYTEXT (461) 201
    TO (462)
    TRAILING (463) 273
    TRIGGER (464)
    UNDO (465)
    UNION (466)
    UNIQUE (467) 161 162
    UNLOCK (468)
    UNSIGNED (469) 172
    UPDATE (470) 97 124
    USAGE (471)
    USE (472) 73
    USING (473) 72 93
    UTC_DATE (474)
    UTC_TIME (475)
    UTC_TIMESTAMP (476)
    VALUES (477) 95 120
    VARBINARY (478) 196
    VARCHAR (479) 194
    VARYING (480)
    WHEN (481) 290 291
    WHERE (482) 7
    WHILE (483)
    WITH (484) 16
    WRITE (485)
    XOR (486) 237
    YEAR (487) 192 282
    YEAR_MONTH (488) 281
    ZEROFILL (489) 173
    FSUBSTRING (490) 267 268 269
    FTRIM (491) 270 271
    FDATE_ADD (492) 275
    FDATE_SUB (493) 276
    FCOUNT (494) 265 266


Nonterminals, with rules where they appear

    $accept (254)
        on left: 0
    stmt_list (255)
        on left: 1 2
        on right: 0 2
    stmt (256)
        on left: 3 82 94 119 123 132 137 215
        on right: 1 2
    select_stmt (257)
        on left: 4 5
        on right: 3 81 114 122 209 239 240 241 242 261 262 263
    opt_where (258)
        on left: 6 7
        on right: 5 83 88 93 124
    opt_groupby (259)
        on left: 8 9
        on right: 5
    groupby_list <intval> (260)
        on left: 10 11
        on right: 9 11 20
    opt_asc_desc <intval> (261)
        on left: 12 13 14
        on right: 10 11
    opt_with_rollup <intval> (262)
        on left: 15 16
        on right: 9
    opt_having (263)
        on left: 17 18
        on right: 5
    opt_orderby (264)
        on left: 19 20
        on right: 5 83 124
    opt_limit (265)
        on left: 21 22 23
        on right: 5 83 124
    opt_into_list (266)
        on left: 24 25
        on right: 5
    column_list <intval> (267)
        on left: 26 27
        on right: 25 27 72 106 148 149 150 151 152 161
    select_opts <intval> (268)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 4 5 29 30 31 32 33 34 35 36
    select_expr_list <intval> (269)
        on left: 37 38 39
        on right: 4 5 38
    select_expr (270)
        on left: 40
        on right: 37 38
    table_references <intval> (271)
        on left: 41 42
        on right: 5 42 48 88 93 124
    table_reference (272)
        on left: 43 44
        on right: 41 42 54 55 56 57 58
    table_factor (273)
        on left: 45 46 47 48
        on right: 43 54 55 56 57 58
    opt_as (274)
        on left: 49 50
        on right: 47 209
    opt_as_alias (275)
        on left: 51 52 53
        on right: 40 45 46
    join_table (276)
        on left: 54 55 56 57 58
        on right: 44
    opt_inner_cross <intval> (277)
        on left: 59 60 61
        on right: 54
    opt_outer <intval> (278)
        on left: 62 63
        on right: 57 66 67
    left_or_right <intval> (279)
        on left: 64 65
        on right: 57
    opt_left_or_right_outer <intval> (280)
        on left: 66 67 68
        on right: 58
    opt_join_condition (281)
        on left: 69 70
        on right: 54
    join_condition (282)
        on left: 71 72
        on right: 57 69
    index_hint (283)
        on left: 73 74 75 76
        on right: 45 46
    opt_for_join <intval> (284)
        on left: 77 78
        on right: 73 74 75
    index_list <intval> (285)
        on left: 79 80
        on right: 73 74 75 80
    table_subquery (286)
        on left: 81
        on right: 47
    delete_stmt (287)
        on left: 83 88 93
        on right: 82
    delete_opts <intval> (288)
        on left: 84 85 86 87
        on right: 83 84 85 86 88 93
    delete_list <intval> (289)
        on left: 89 90
        on right: 88 90 93
    opt_dot_star (290)
        on left: 91 92
        on right: 89 90
    insert_stmt (291)
        on left: 95 113 114
        on right: 94
    opt_ondupupdate (292)
        on left: 96 97
        on right: 95 113 114 120 121 122
    insert_opts <intval> (293)
        on left: 98 99 100 101 102
        on right: 95 99 100 101 102 113 114 120 121 122 126 127
    opt_into (294)
        on left: 103 104
        on right: 95 113 114 120 121 122
    opt_col_names (295)
        on left: 105 106
        on right: 95 114 120 122
    insert_vals_list <intval> (296)
        on left: 107 108
        on right: 95 108 120
    insert_vals <intval> (297)
        on left: 109 110 111 112
        on right: 107 108 111 112
    insert_asgn_list <intval> (298)
        on left: 115 116 117 118
        on right: 97 113 117 118 121
    replace_stmt (299)
        on left: 120 121 122
        on right: 119
    update_stmt (300)
        on left: 124
        on right: 123
    update_opts <intval> (301)
        on left: 125 126 127
        on right: 124
    update_asgn_list <intval> (302)
        on left: 128 129 130 131
        on right: 124 130 131
    create_database_stmt (303)
        on left: 133 134
        on right: 132
    opt_if_not_exists <intval> (304)
        on left: 135 136
        on right: 133 134 138 139 140 141 142 143
    create_table_stmt (305)
        on left: 138 139 140 141 142 143
        on right: 137
    create_col_list <intval> (306)
        on left: 144 145
        on right: 138 139 140 142 145
    create_definition (307)
        on left: 147 148 149 150 151 152
        on right: 144 145
    $@1 (308)
        on left: 146
        on right: 147
    column_atts <intval> (309)
        on left: 153 154 155 156 157 158 159 160 161 162 163 164 165
        on right: 147 154 155 156 157 158 159 160 161 162 163 164 165
    opt_length <intval> (310)
        on left: 166 167 168
        on right: 177 178 179 180 181 182 183 184 185 186 187 193 195
    opt_binary <intval> (311)
        on left: 169 170
        on right: 201 202 203 204
    opt_uz <intval> (312)
        on left: 171 172 173
        on right: 172 173 178 179 180 181 182 183 184 185 186 187
    opt_csc (313)
        on left: 174 175 176
        on right: 175 176 193 194 201 202 203 204 205 206
    data_type <intval> (314)
        on left: 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206
        on right: 147
    enum_list <intval> (315)
        on left: 207 208
        on right: 205 206 208
    create_select_statement (316)
        on left: 209
        on right: 140 141 142 143
    opt_ignore_replace <intval> (317)
        on left: 210 211 212
        on right: 209
    opt_temporary <intval> (318)
        on left: 213 214
        on right: 138 139 140 141 142 143
    set_stmt (319)
        on left: 216
        on right: 215
    set_list (320)
        on left: 217 218
        on right: 216 218
    set_expr (321)
        on left: 219 220
        on right: 217 218
    linkedListNode (322)
        on left: 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 259 260 261 262 263 264 265 266 267 268 269 270 271 275 276 286 287 288 289 292 293 294 295 296 297 298 299
        on right: 7 10 11 18 22 23 40 56 71 109 111 115 117 128 129 130 131 219 220 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 259 260 261 262 266 268 269 271 275 276 277 278 279 280 281 282 283 284 285 286 287 289 290 291 292 293 294 295 299
    val_list <intval> (323)
        on left: 255 256
        on right: 256 258 259 260 267 270 271
    opt_val_list <intval> (324)
        on left: 257 258
        on right: 264
    trim_ltb (325)
        on left: 272 273 274
        on right: 271
    interval_exp (326)
        on left: 277 278 279 280 281 282 283 284 285
        on right: 275 276
    case_list <intval> (327)
        on left: 290 291
        on right: 286 287 288 289 291


State 0

    0 $accept: • stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt_list             go to state 8
    stmt                  go to state 9
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


State 1

  133 create_database_stmt: CREATE • DATABASE opt_if_not_exists NAME
  134                     | CREATE • SCHEMA opt_if_not_exists NAME
  138 create_table_stmt: CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  139                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  140                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  141                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  142                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  143                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 18
    SCHEMA     shift, and go to state 19
    TEMPORARY  shift, and go to state 20

    $default  reduce using rule 213 (opt_temporary)

    opt_temporary  go to state 21


State 2

   83 delete_stmt: DELETE • delete_opts FROM NAME opt_where opt_orderby opt_limit
   88            | DELETE • delete_opts delete_list FROM table_references opt_where
   93            | DELETE • delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 87 (delete_opts)

    delete_opts  go to state 22


State 3

   95 insert_stmt: INSERT • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  113            | INSERT • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  114            | INSERT • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 98 (insert_opts)

    insert_opts  go to state 23


State 4

  120 replace_stmt: REPLACE • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  121             | REPLACE • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  122             | REPLACE • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 98 (insert_opts)

    insert_opts  go to state 24


State 5

    4 select_stmt: SELECT • select_opts select_expr_list
    5            | SELECT • select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 28 (select_opts)

    select_opts  go to state 25


State 6

  216 set_stmt: SET • set_list

    USERVAR  shift, and go to state 26

    set_list  go to state 27
    set_expr  go to state 28


State 7

  124 update_stmt: UPDATE • update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit
